--- a/main.css
+++ b/main.css
@@ -1,4 +1,22 @@
-.naam{
-    color: red;
-    
+body{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.toevoegen{
+    background-color: #eeeedd;
+    border-radius: 7.5px;
+    box-shadow: 0px 0px 8px 1px;
+    width: 400px;
+    text-align: center;
+    margin: 25px;
+}
+
+.titel{
+    margin: 20px;
+}
+
+.itemToevoegen{
+    margin: 20px;
 }
